--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,12 +29,15 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  
 
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
 
   cupertino_icons: ^1.0.2
+  provider: 
+  shared_preferences:
 
   intl: 
   path: 
